cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD)
project(LAB7)
add_executable(map_tester.bin
maze_tester.cpp
maze.cpp
)
add_executable(maze.bin
maze.cpp
main.cpp
random_robot.cpp
right_hand_rule_robot.cpp
pathfinder_robot.cpp
)
add_executable(maze_with_controller.bin
maze.cpp
controller_tester.cpp
random_robot.cpp
right_hand_rule_robot.cpp
pathfinder_robot.cpp
robot_controller.cpp
)